--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,13 @@ body {
     #team-members .member img {
       width: 200px;
       height: 200px; }
+    #team-members .member img:nth-child(2) {
+      display: none; }
     #team-members .member div.name {
       text-align: center; }
+  #team-members .member:hover img:first-child {
+    display: none; }
+  #team-members .member:hover img:nth-child(2) {
+    display: inline-block; }
 
 /*# sourceMappingURL=style.css.map */
