SCSS: round border

--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,10 @@ body {
     padding: 6px; }
     #team-members .member img {
       width: 200px;
-      height: 200px; }
+      height: 200px;
+      -moz-border-radius: 100%;
+      -webkit-border-radius: 100%;
+      border-radius: 100%; }
     #team-members .member img:nth-child(2) {
       display: none; }
     #team-members .member div.name {
