--- a/scss/style.scss
+++ b/scss/style.scss
@@ -25,6 +25,9 @@ body {
 
       width: 200px;
       height: 200px;
+      -moz-border-radius: 100%;
+      -webkit-border-radius: 100%;
+      border-radius: 100%;
     }
 
     img:nth-child(2) {
