--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,8 @@ body {
       height: 200px;
       -moz-border-radius: 100%;
       -webkit-border-radius: 100%;
-      border-radius: 100%; }
+      border-radius: 100%;
+      box-shadow: -5px 5px 5px #888888; }
     #team-members .member img:nth-child(2) {
       display: none; }
     #team-members .member div.name {
