--- a/scss/style.scss
+++ b/scss/style.scss
@@ -28,6 +28,7 @@ body {
       -moz-border-radius: 100%;
       -webkit-border-radius: 100%;
       border-radius: 100%;
+      box-shadow: -5px 5px 5px #888888
     }
 
     img:nth-child(2) {
