--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,9 @@ body {
   #team-members .member:hover img:first-child {
     display: none; }
   #team-members .member:hover img:nth-child(2) {
-    display: inline-block; }
+    display: inline-block;
+    -webkit-transform: scale(1.2);
+    -ms-transform: scale(1.2);
+    transform: scale(1.2); }
 
 /*# sourceMappingURL=style.css.map */
